@@ -1168,7 +1168,7 @@ cleanup:
     int t_ret;
     struct stat sb;
     struct dirent *entry;
-    char entry_name[255];
+    char entry_name[MBEDTLS_X509_MAX_FILE_PATH_LEN];
     DIR *dir = opendir( path );
 
     if( dir == NULL )
@@ -1185,6 +1185,7 @@ cleanup:
     while( ( entry = readdir( dir ) ) != NULL )
     {
         mbedtls_snprintf( entry_name, sizeof entry_name, "%s/%s", path, entry->d_name );
+        //entry_name length is MBEDTLS_X509_MAX_FILE_PATH_LEN  and it includes both path and filename
 
         if( stat( entry_name, &sb ) == -1 )
         {
